--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ googleapis-common-protos==1.53.0
 grpc-google-iam-v1==0.12.3
 grpcio==1.38.1
 mccabe==0.6.1
+pandas==1.3.0
 python-dateutil==2.8.2
 python-decouple==3.4
 requests==2.26.0
